src/snapshots/backup_monitor__settings__tests__deserialize_empty.snap
---
source: src/settings.rs
expression: settings
---
icon-name: backup
title: Backup
scripts: []
autostart: false
