src/snapshots/backup_monitor__settings__tests__deserialize_full.snap
---
source: src/settings.rs
assertion_line: 160
expression: settings
---
icon-name: backup
title: Backup
scripts:
  - name: Backup
    icon-name: ~
    backup-script: "#!/usr/bin/env bash\nset -o errexit\n/usr/bin/backup.sh\n"
    mount-paths:
      - /mnt/backup
    interval: 1day
    reminder: 7days
    post-backup-actions:
      - label: Unmount backup HDD
        script: "#!/usr/bin/env bash\nset -o errexit\numount /mnt/backup\n"
    last-backup: "2024-10-24T20:18:00.857399073Z"
autostart: true
